@@ -37,7 +37,7 @@ cargo build --workspace --all-targets
 | `gpu` / `gpu-driver` | `cratonvm-cli` | Enable GPU offload plumbing (stub) / real CUDA driver. See [GPU Offload](../gpu/overview.md). |
 | `mimalloc` | `cratonvm-cli` | Use mimalloc as the global allocator (on by default; faster on Windows). |
 | `awt` | `vm` | AWT/Swing/Java2D natives (on by default). |
-| `zgc` | `gc` | Compile the (non-selectable) ZGC stub. Off by default. |
+| `zgc` | `cratonvm-cli` → `vm` → `gc` | Compile the ZGC backend in, so `-XX:+UseZGC` actually selects it. Off by default: a stock build has no `GcAlgorithm::Zgc` variant at all, and `-XX:+UseZGC` warns and falls back to Generational. It is a stop-the-world non-moving mark-sweep, not production ZGC — see [The Garbage Collector](../internals/garbage-collector.md#collectors). |
 
 ```bash
 # A java[.exe] alias alongside cratonvm
@@ -45,6 +45,9 @@ cargo build --release -p cratonvm-cli --features java-bin-alias
 
 # GPU offload with the real CUDA driver
 cargo build --release -p cratonvm-cli --features gpu-driver
+
+# A ZGC-capable launcher (`-XX:+UseZGC` is inert without this)
+cargo build --release -p cratonvm-cli --features zgc
 ```
 
 The default `cargo build` produces a CPU-only JVM with **no** GPU code linked.
